# VOICEVOX

./: .gitignore  README.md  data.csv  main.py  pyproject.toml
